Bound tank limiting work with a direct turn choice and acceleration search